--- a/蘵感ZanGan上傳/news media.css
+++ b/蘵感ZanGan上傳/news media.css
@@ -195,6 +195,7 @@ h2 {
     color: #1D201D;
     letter-spacing: 2px;
     padding: 5px 0;
+    line-height: 1.2rem;
 }
 
 h3 {
@@ -202,6 +203,7 @@ h3 {
     color: #1D201D;
     letter-spacing: 2px;
     padding: 5px 0;
+    line-height: 1.2rem;
 }
 
 h4 {
@@ -211,13 +213,12 @@ h4 {
     padding: 5px 0;
 }
 
-.more {
+/* .more {
     font-size: 14px;
-    /* color: #1D201D; */
     color: red;
     letter-spacing: 2px;
     padding: 5px 0;
-}
+} */
 
 /* -------------------all_section 全部統一比例總寬度1000-------------------*/
 /* 暫時先不用 */
@@ -241,6 +242,8 @@ h4 {
 
 
 /* 1.topbar */
+/* 1.topbar */
+/* 字距色彩大小 */
 #topbar {
     background-color: #3C4935;
     display: flex;
@@ -290,27 +293,62 @@ h4 {
 }
 
 /* 玻璃擬態 */
+/* 0.原本的底色 */
 .signup {
-    background-color: #E7E4DB;
-    opacity: 19%;
-    width: 100px;
+    background-color: #9B8256;
+    opacity: 100%;
+    /* +++沒反應 */
+    width: 160px;
     height: 30px;
+    /* 以上+++ */
+    padding: 10px 80px;
+    margin: 0 10px;
+    /* +++ */
+
     z-index: 1;
     position: relative;
-}
-
-/* 立即報名 */
-.word {
-    z-index: 99;
-    position: absolute;
     /* border: #8994df 5px solid; */
 }
 
-/* 立即報名+玻璃擬態 */
+
+/* 快速報名 */
+/* 0.原本 */
+.word {
+    z-index: 99;
+    position: absolute;
+    display: flex;
+    /* border: #89dfa3 5px solid; */
+    justify-content: center;
+    align-items: center;
+    /* +++ */
+    padding: 0 20px;
+}
+
+
+/* +++測試 */
+/* 快速報名 */
+#topbar .m_btn {
+    background-color: rgba(155,130,86,.74);
+    border-color: #9B8256;
+    border-radius: 5px;
+    width: 160px;
+    height: 35px;
+    margin-right: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#topbar .m_btn a {
+    margin-right: 15px;
+}
+
+/* 快速報名+玻璃擬態 */
 .box {
     display: flex;
     justify-content: center;
     align-items: center;
+
 }
 
 /* 2.news */
@@ -437,47 +475,47 @@ h4 {
     /* border: solid 5px red; */
 }
 
-#news_content .title{
+#news_content .title {
     /* border: solid 5px rgb(181, 212, 153); */
 }
 
 /* 標題區 */
-#news_content section{
+#news_content section {
     text-align: center;
     padding: 10px 0;
-    margin: 10px 0 ;
+    margin: 10px 0;
     /* border: solid 5px rgb(228, 147, 147);  */
-} 
+}
 
-#news_content ul{
+#news_content ul {
     display: flex;
     justify-content: center;
 }
 
 /* 選單區 */
-#news_content li{
+#news_content li {
     padding: 5px 5px;
     margin: 0 5px;
     /* display: flex;
     text-align: center;
     align-items: center;*/
-} 
+}
 
-#news_content li a{
+#news_content li a {
     display: block;
     text-decoration: none;
     width: 180px;
     height: 40px;
-    border: solid 2px #E7E4DB ;
+    border: solid 2px #E7E4DB;
     border-radius: 5px;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom:40px ;
+    margin-bottom: 40px;
 }
 
 /* 主要區塊 */
-#news_content .nc_main{
+#news_content .nc_main {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -504,18 +542,18 @@ h4 {
     width: 700px;
 }
 
-#news h1{
+#news h1 {
     font-size: 34px;
     color: #1D201D;
 }
 
-#news_content .img2{
+#news_content .img2 {
     /* width: 300px;
     height: 600px;
     border: solid 5px rgb(154, 228, 147); */
 }
 
-.news_col{
+.news_col {
     margin: 0 20px;
     /* border: solid 5px rgb(154, 228, 147); */
 }
@@ -525,7 +563,7 @@ h4 {
 /* ----------------------------------------news_page分頁---------------------------------------- */
 /* 4.news_page */
 /* 最新消息詳情頁 */
-#news_page {
+#news_page ,#media_page{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -543,7 +581,7 @@ h4 {
 /* 主要區塊 */
 /* 框住date和section的範圍block */
 /* 水平 */
-.news_page_block {
+.news_page_block,.media_page_block {
     background-color: #F0F0F0;
     /* opacity: 0.3; */
     display: flex;
@@ -578,7 +616,7 @@ h4 {
 }
 
 /* 中間右邊內文區塊 */
-.news_page_section {
+.news_page_section ,.media_page_section {
     background-color: #F0F0F0;
     color: #1D201D;
     width: 900px;
@@ -588,8 +626,9 @@ h4 {
     /* border: #62e4f5 5px solid; */
 }
 
-/* 更多詳情 */
-#news_page a {
+/* news更多詳情+media瞭解課程 */
+
+#news_page a ,#media_page a {
     display: flex;
     text-decoration: none;
     background-color: #3C4935;
@@ -620,7 +659,7 @@ h4 {
 } */
 
 /* 文字內容 */
-.news_page_text {
+.news_page_text,.media_page_text {
     font-size: 14px;
     color: #1D201D;
     letter-spacing: 1px;
@@ -638,7 +677,7 @@ h4 {
     justify-content: space-around;
 }
 
-.news_page_main {
+.news_page_main,.media_page_main {
     position: relative;
     /* border: #799ed5 5px solid; */
 }
@@ -653,37 +692,321 @@ h4 {
     /* border: #7a15d3 5px solid; */
 }
 
-.news_page_gray {
+.news_page_gray ,.media_page_gray{
     background-color: #F0F0F0;
     /* border: #b973be 5px solid; */
     color: #F0F0F0;
 
 }
 
-.news_page_title h1 {
+.news_page_title h1,.media_page_title h1 {
     font-size: 24px;
     color: #1D201D;
     letter-spacing: 2px;
     line-height: 1.2rem;
 }
 
-.news_page_text p {
+.news_page_text p,.media_page_text p {
     line-height: 1.2rem;
     margin: 20px 0;
     /* border: solid 1px blue; */
 }
 
 /* 最新消息圖片 */
-.news_page_img img {
+.news_page_img img,.media_page_img img {
     width: 750px;
     padding-top: 10px;
 }
 
 /* -------------------------media-------------------- */
+/* 共用區 */
+
+
 /* media */
+
+#media {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* 整個區塊 */
+main {
+    /* border: solid 5px red; */
+}
+
+#media .title {
+    text-align: center;
+    /* border: solid 5px red; */
+}
+
+button {
+    width: 180px;
+    height: 40px;
+    /* margin: 5px 10px; */
+    border: solid 2px #F0F0F0;
+    border-radius: 5px;
+    /* border: solid 5px red;  */
+}
+
+/* 按鈕文字 */
+button a {
+    display: flex;
+    justify-content: center;
+    font-size: 14px;
+    /* border: solid 5px red;  */
+}
+
+/* 圖片 */
+#media figure img {
+    width: 380px;
+    height: 180px;
+    /* object-fit:cover; */
+    /* width: 100%;  */
+    /* border: solid 5px rgb(241, 156, 156); */
+}
+
+/* 閱讀更多 */
+.media_more {
+    padding: 5px;
+    margin: 5px;
+    font-size: 14px;
+    color: #1D201D;
+    letter-spacing: 2px;
+    /* border: solid 5px rgb(156, 234, 241); */
+
+    /* display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-end; */
+    position: absolute;
+    right: 0;
+    bottom: 0;
+
+}
+
+/* 右邊文字內容區塊 */
+.list_box {
+    position: relative;
+    height: 180px;
+    padding: 0 20px;
+    /* margin: 0 0 50px 0; */
+    /* border: solid 3px rgb(197, 230, 170); */
+}
+
+/* 單一區塊 */
+.list_item {
+    display: flex;
+    padding: 10px 0;
+    margin: 10px 0;
+    /* border: solid 5px rgb(170, 193, 230); */
+}
+
+/* 整個中間區塊 */
+.list_block{
+    padding: 10px;
+    margin: 10px 0;
+    /* border: solid 5px rgb(222, 170, 230); */
+}
+
+p {
+    padding: 1px 0;
+    /* margin: 5px 0; */
+    margin-bottom: 5px;
+    text-align: start;
+    /* line-height: 5px; */
+    /* border: solid 5px rgb(197, 230, 170); */
+}
+
+#media h3 {
+    color: #5C5C5C;
+}
+
 
 
 /* media_page */
+
+#media_page h2, #media_page h3{
+    color: #797474;
+}
+
+/* 瞭解課程 #media_page a 在上面合併 */
+
+/*底層logo */
+.media_page_logo {
+    position: absolute;
+    top: -40px;
+    right: -160px;
+    padding: 0 5px;
+    /* margin: 0 0 0 30px; */
+    /* border: #7a15d3 5px solid; */
+}
+
+
+/* 圖片間距 */
+#media_page img{
+    /* padding: 5px  0 0 0; */
+    margin: 10px 0;
+    /* border: solid 1px red; */
+}
+
+/* 瞭解課程間距 */
+.media_page_word{
+    margin-bottom: 20px;
+    /* border: solid 1px red; */
+}
+
+
+
+/* +++ */
+/* media_content */
+#media_content {
+    /* vertical-align: middle; */
+    height: 100vh;
+    /* t */
+    /* display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center ; */
+    /* margin-top:700px ; */
+
+    /* +++ */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 150px;
+    /* border: solid 5px rgb(229, 168, 168); */
+}
+
+/* 標題區 */
+.media_content_nav{
+    /* position: relative; */
+    padding: 15px  5px 5px 10px;
+    height: 80px;
+    /* t */
+    display: flex;
+    flex-direction: column;
+    line-height: 20px;
+    /* border: solid 5px rgb(160, 179, 213); */
+    /* +++ */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#media hr {
+    width: 700px;
+    background-color:#797474;
+    margin: 30px 0;
+}
+
+/* logo */
+.media_logo {
+    display: flex;
+    justify-content: flex-end;
+    /* align-items: center; */
+    /* t */
+    /* position: absolute;
+    right: 0;
+    top: 0; */
+    /* border: solid 5px red; */
+    width: 700px;
+    margin-right:10px ;
+
+}
+
+/* 大區塊 */
+.media_main {
+    display: flex;
+    justify-content: space-around;
+    /* border: solid 5px rgb(163, 236, 159); */
+}
+
+/* 小區塊*6 */
+.media_section {
+    width: 400px;
+    height: 400px;
+    /* border: solid 5px rgb(159, 214, 236); */
+    padding: 0 10px;
+    margin:0 10px ;
+    /* display: flex;
+    justify-content: space-between; */
+}
+
+/* 
+.media_col{
+    width: 400px;
+    border: #a90707d3 5px solid;
+} */
+
+/* #media img{
+    width: 350px;
+    height: 200px;
+} */
+
+/* 內文日期 */
+.media_date {
+    font-size: 14px;
+    color: #414042;
+    letter-spacing: 2px;
+    padding: 5px;
+    margin: 5px;
+}
+
+/* 內文小標 */
+.media_title {
+    font-size: 16px;
+    color: #1D201D;
+    letter-spacing: 2px;
+    line-height: 1.5rem;
+    font-weight: bold;
+    padding: 5px;
+    margin: 5px;
+}
+
+/* 內文文字 */
+.media_text {
+    font-size: 14px;
+    color: #5C5C5C;
+    letter-spacing: 2px;
+    line-height: 1.5rem;
+    padding: 5px;
+    margin: 5px;
+}
+
+/* 閱讀更多 */
+/* .media_more {
+    padding: 5px;
+    margin: 5px;
+    font-size: 14px;
+    color: #1D201D;
+    letter-spacing: 2px;
+} */
+
+/* nav區 */
+.c {
+    /* border: solid 5px rgb(250, 150, 150); */
+    display: flex;
+    /* justify-content: center; */
+    padding: 10px 10px 0 10px;
+    margin: 20px  10px 50px 10px;
+   
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /* footer */
@@ -693,7 +1016,8 @@ h4 {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    margin-top: 1px;
+    /* margin-top: 1px; */
+    margin-top: 250px ;
     /* border: solid 5px red; */
 
 }
@@ -736,20 +1060,21 @@ h4 {
     margin: 30px 0;
 }
 
-.copyright{
+.copyright {
     color: #fff;
     font-size: 12px;
     font-family: 'Unna', serif;
 }
 
-#footer h1{
-    color: #fff;;
+#footer h1 {
+    color: #fff;
+    ;
     font-size: 30px;
     font-family: 'Unna', serif;
 
 }
 
-#footer h3{
+#footer h3 {
     color: #E7E4DB;
-    
+
 }
