--- a/蘵感ZanGan上傳/topbar.css
+++ b/蘵感ZanGan上傳/topbar.css
@@ -213,8 +213,8 @@ h4 {
 
 .more {
     font-size: 14px;
-    /* color: #1D201D; */
-    color: red;
+    color: #1D201D;
+    /* color: red; */
     letter-spacing: 2px;
     padding: 5px 0;
 }
@@ -364,7 +364,7 @@ hr {
 /* 精簡code +a +svg+btn */
 /* 字距色彩大小 */
 #topbar {
-    background-color: #3C4935;
+    background-color: rgba(255, 255, 255, 0.05);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -483,12 +483,102 @@ hr {
 
 }
 
+/* +++0510 */
 #topbar .logo{
     margin-left: 100px;
     /* border: solid 5px salmon; */
 }
 
 /* 2.banner */
+#banner{
+    height: 100vh;
+    /* border: solid 5px rgb(186, 229, 181); */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+    
+}
+#banner .sec{
+    position: relative;
+    z-index: 99;
+    /* border: solid 5px salmon; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+#banner video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    /* RWD物件填滿 */
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    
+}
+
+#banner .logo{
+    /* z-index: 999; */
+    /* border: solid 5px rgb(222, 176, 215); */
+    /* width: 80px;
+    height: 80px; */
+    /* z-index: 2; */
+    
+
+}
+
+#banner .text{
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 0;
+    
+    /* border: solid 5px rgb(158, 178, 233); */
+}
+
+#banner h1,#banner h2, #banner h3{
+    color: #fff;
+}
+
+#banner .more{
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+#banner h1{
+    font-size: 28px;
+    padding: 20px 0;
+}
+
+#banner h2{
+    font-size: 38px;
+    padding: 20px 0;
+}
+
+#banner h4{
+    margin: 10px;
+    font-size: 34px;
+    color: #fff;
+}
+
+#banner h3{
+    margin: 10px;
+}
+
+
+
+
 /* 3.about */
 #about {
     position: relative;
@@ -714,7 +804,7 @@ hr {
     display: flex;
     color: #E7E4DB;
     /* +++ */
-    margin:10px;
+    margin: 10px;
     /* border: #acbe27 5px solid; */
 }
 
@@ -750,7 +840,7 @@ hr {
 .course_more {
     display: block;
     text-align: left;
-    margin-left:  10px;
+    margin-left: 10px;
     margin-top: 40px;
     bottom: 0;
     /* border: solid 5px rgb(205, 231, 133); */
@@ -915,19 +1005,19 @@ hr {
     /* align-items: flex-start; */
     /* border: solid 5px #8d5c5c; */
     position: absolute;
-    left:200px ;
+    left: 200px;
     top: 0;
     /* margin: 20px 0; */
 }
 
 /* 整個區塊 */
-.a{
+.a {
     position: relative;
     /* border: solid 5px #83c1d0; */
 }
 
 /* bg_logo */
-.b{
+.b {
     position: absolute;
     top: -240px;
     right: 150px;
@@ -1070,7 +1160,7 @@ hr {
     /* margin: 5 5 0 5px; */
 }
 
-#news h1{
+#news h1 {
     font-size: 34px;
     color: #1D201D;
 }
@@ -1085,14 +1175,14 @@ hr {
     flex-direction: column;
     justify-content: center;
     align-items: center ; */
-    margin-top:700px ;
+    margin-top: 700px;
     /* border: solid 5px red; */
 }
 
 /* 標題區 */
 .media_nav {
     /* position: relative; */
-    padding: 15px  5px 5px 10px;
+    padding: 15px 5px 5px 10px;
     height: 80px;
     /* t */
     display: flex;
@@ -1103,7 +1193,7 @@ hr {
 
 #media hr {
     width: 700px;
-    background-color:#797474;
+    background-color: #797474;
     margin: 30px 0;
 }
 
@@ -1118,7 +1208,7 @@ hr {
     top: 0; */
     /* border: solid 5px red; */
     width: 700px;
-    margin-right:10px ;
+    margin-right: 10px;
 
 }
 
@@ -1135,7 +1225,7 @@ hr {
     height: 400px;
     /* border: solid 5px rgb(159, 214, 236); */
     padding: 0 10px;
-    margin:0 10px ;
+    margin: 0 10px;
     /* display: flex;
     justify-content: space-between; */
 }
@@ -1196,8 +1286,8 @@ hr {
     display: flex;
     /* justify-content: center; */
     padding: 10px 10px 0 10px;
-    margin: 20px  10px 50px 10px;
-   
+    margin: 20px 10px 50px 10px;
+
 }
 
 /* 8.footer */
@@ -1250,20 +1340,21 @@ hr {
     margin: 30px 0;
 }
 
-.copyright{
+.copyright {
     color: #fff;
     font-size: 12px;
     font-family: 'Unna', serif;
 }
 
-#footer h1{
-    color: #fff;;
+#footer h1 {
+    color: #fff;
+    ;
     font-size: 30px;
     font-family: 'Unna', serif;
 
 }
 
-#footer h3{
+#footer h3 {
     color: #E7E4DB;
-    
+
 }
