--- a/蘵感ZanGan上傳/news media.css
+++ b/蘵感ZanGan上傳/news media.css
@@ -520,6 +520,23 @@ h4 {
     align-items: center;*/
 }
 
+#news_content li a:hover{
+    background-color: #3C4935;
+    color: #fff;
+    /* +++ */
+    display: block;
+    text-decoration: none;
+    width: 180px;
+    height: 40px;
+    border: solid 2px #E7E4DB;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 40px;
+}
+
+/* 單一按鈕 */
 #news_content li a {
     display: block;
     text-decoration: none;
