--- a/蘵感ZanGan上傳/www.css
+++ b/蘵感ZanGan上傳/www.css
@@ -361,7 +361,8 @@ hr {
 }
 
 /* 1.1 1.2topbar white green 精簡+100%  */
-#topbar,#topbarw{
+#topbar,
+#topbarw {
     background-color: #3C4935;
     display: flex;
     justify-content: space-around;
@@ -376,30 +377,34 @@ hr {
     z-index: 999;
     width: 100%;
 }
-#topbarw{
-    background-color: rgba(255,255,255,0.05);
-    
+
+#topbarw {
+    background-color: rgba(255, 255, 255, 0.05);
+
 }
 
 /* 各別區域 */
-#topbar ul ,#topbarw ul{
+#topbar ul,
+#topbarw ul {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 /* 單個 */
-#topbar li ,#topbarw li{
+#topbar li,
+#topbarw li {
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 0 10px;
     /* border: solid 3px pink; */
-    
+
 }
 
 /* 單個文字 */
-#topbar h3,#topbarw h3{
+#topbar h3,
+#topbarw h3 {
     color: #fff;
     font-size: 14px;
     letter-spacing: 2px;
@@ -408,25 +413,26 @@ hr {
 }
 
 /* 快速報名 */
-.signup{
+.signup {
     display: flex;
-    background-color: rgba(155,130,86,.74);
+    background-color: rgba(155, 130, 86, .74);
     padding: 5px;
     margin: 0 20px;
 }
 
 /* 2.banner */
-#banner{
+#banner {
     height: 80vh;
     /* border: solid 5px rgb(186, 229, 181); */
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
-    
+
+
 }
-#banner .sec{
+
+#banner .sec {
     position: relative;
     z-index: 99;
     /* border: solid 5px salmon; */
@@ -434,7 +440,7 @@ hr {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
+
 }
 
 /* 背景影片MP4 */
@@ -447,13 +453,13 @@ hr {
     object-fit: cover;
     width: 100%;
     height: 100%;
-    
+
 }
 
 /* 背景影片gif img */
 /* gif影片模糊不使用 */
 #banner .bgvideo img,
-#banner .bgvideo figure{
+#banner .bgvideo figure {
     /* position: absolute;
     top: 0;
     left: 0;
@@ -463,34 +469,36 @@ hr {
     width: 100%;
     height: 100%; */
     /* border: solid 5px rgb(222, 176, 215); */
-} 
+}
 
-#banner .logo{
+#banner .logo {
     /* z-index: 999; */
     /* border: solid 5px rgb(222, 176, 215); */
     /* width: 80px;
     height: 80px; */
     /* z-index: 2; */
-    
+
 
 }
 
-#banner .text{
+#banner .text {
     color: #fff;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 20px 0;
-    
+
     /* border: solid 5px rgb(158, 178, 233); */
 }
 
-#banner h1,#banner h2,#banner h3{
+#banner h1,
+#banner h2,
+#banner h3 {
     color: #fff;
 }
 
-#banner .more{
+#banner .more {
     color: #fff;
     display: flex;
     justify-content: center;
@@ -498,23 +506,23 @@ hr {
 
 }
 
-#banner h1{
+#banner h1 {
     /* font-size: 34px; */
     padding: 20px 0;
 }
 
-#banner h2{
+#banner h2 {
     font-size: 38px;
     padding: 20px 0;
 }
 
-#banner h4{
+#banner h4 {
     margin: 10px;
     font-size: 34px;
     color: #fff;
 }
 
-#banner h3{
+#banner h3 {
     margin: 10px;
 }
 
@@ -640,70 +648,112 @@ hr {
 /* 底圖大logo */
 .bg_logo {
     margin-top: 180px;
+    position: absolute;
+    z-index: 99;
     /* border: solid 5px red;  */
 }
 
 /* 4.course */
-#course{
+#course {
     height: 100vh;
     background-color: #3C4935;
     color: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
+    /* border: solid 5px pink; */
 }
 
 /* h3字體顏色 */
-#course h3{
+#course h3 {
     color: #fff;
     letter-spacing: 1px;
 }
 
 /* 整個區塊 */
-#course ul{
+#course ul {
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 85%;
+    height: 80vh;
+    /* border: solid 2px rgb(192, 232, 255); */
+    
 }
+
+/* 上下相對位置 */
+/* 共用上面行 */
+.item1,.item3,.item5 {
+    position: absolute;
+    top: 50px;
+}
+
+/* 共用下面行 */
+.item2,.item4{
+    position: absolute;
+    top: 150px;
+}
+
+/* 獨立距離 */
+.item1{
+    left: 80px;
+}
+
+.item2 {
+    left: 290px;
+}
+
+.item3 {
+    left: 500px;
+} 
+
+.item4 {
+    left: 710px;
+}
+
+.item5 {
+    left: 920px;
+} 
+
 /* 單一區塊 */
-#course li{
+#course li {
     display: flex;
     flex-direction: column;
     justify-content: center;
     padding: 10px;
-    
     /* border: solid 2px pink; */
 }
 
 /* 圖片區塊 放入咖啡色區塊 */
-#course .cimg{
+#course .cimg {
     position: relative;
     /* border: solid 2px pink;  */
 }
 
 /* 單個圖片 */
-.cimg img{
+.cimg img {
     width: 100%;
     height: 60vh;
     /* border: solid 3px pink; */
 }
 
 /* 小標題 藝術插花和圖示 */
-#course nav{
+#course nav {
     display: flex;
     align-items: center;
     /* border: solid 3px pink; */
 }
 
 /*藝術插花和其他的間距  */
-#course span{
+#course span {
     padding: 0 10px;
     /* margin: 0 5px; */
 }
 
 /* 咖啡色區塊 */
-#course .cblock h3{
-    background-color: rgba(155,130,86,0.85);
+#course .cblock h3 {
+    background-color: rgba(155, 130, 86, 0.85);
     position: absolute;
     left: 0;
     bottom: 0;
@@ -715,10 +765,10 @@ hr {
     align-items: center;
 }
 
-
-
-
-
+/* 調整每個區塊相對的上下位置 */
+.item1 {
+   
+}
 
 /* 5.teachers */
 #teachers {
@@ -849,22 +899,22 @@ hr {
     /* align-items: flex-start; */
     /* border: solid 5px #8d5c5c; */
     position: absolute;
-    left:200px ;
+    left: 200px;
     top: 0;
     /* margin: 20px 0; */
 }
 
 /* 整個區塊 */
-.a{
+.a {
     position: relative;
     /* border: solid 5px #83c1d0; */
 }
 
 /* bg_logo */
-.b{
+.b {
     position: absolute;
-    top: -240px;
-    right: 150px;
+    top: -160px;
+    right: 100px;
 }
 
 
@@ -1003,7 +1053,7 @@ hr {
     /* margin: 5 5 0 5px; */
 }
 
-#news h1{
+#news h1 {
     font-size: 34px;
     color: #1D201D;
 }
@@ -1018,14 +1068,14 @@ hr {
     flex-direction: column;
     justify-content: center;
     align-items: center ; */
-    margin-top:700px ;
+    margin-top: 700px;
     /* border: solid 5px red; */
 }
 
 /* 標題區 */
 .media_nav {
     /* position: relative; */
-    padding: 15px  5px 5px 10px;
+    padding: 15px 5px 5px 10px;
     height: 80px;
     /* t */
     display: flex;
@@ -1036,7 +1086,7 @@ hr {
 
 #media hr {
     width: 700px;
-    background-color:#797474;
+    background-color: #797474;
     margin: 30px 0;
 }
 
@@ -1051,7 +1101,7 @@ hr {
     top: 0; */
     /* border: solid 5px red; */
     width: 700px;
-    margin-right:10px ;
+    margin-right: 10px;
 
 }
 
@@ -1068,7 +1118,7 @@ hr {
     height: 400px;
     /* border: solid 5px rgb(159, 214, 236); */
     padding: 0 10px;
-    margin:0 10px ;
+    margin: 0 10px;
     /* display: flex;
     justify-content: space-between; */
 }
@@ -1129,8 +1179,8 @@ hr {
     display: flex;
     /* justify-content: center; */
     padding: 10px 10px 0 10px;
-    margin: 20px  10px 50px 10px;
-   
+    margin: 20px 10px 50px 10px;
+
 }
 
 /* 8.footer */
@@ -1179,22 +1229,21 @@ hr {
     margin: 30px 0;
 }
 
-.copyright{
+.copyright {
     color: #fff;
     font-size: 12px;
     font-family: 'Unna', serif;
 }
 
-#footer h1{
-    color: #fff;;
+#footer h1 {
+    color: #fff;
+    ;
     font-size: 30px;
     font-family: 'Unna', serif;
 
 }
 
-#footer h3{
+#footer h3 {
     color: #E7E4DB;
-    
+
 }
-
-
