--- a/蘵感ZanGan上傳/style.css
+++ b/蘵感ZanGan上傳/style.css
@@ -361,7 +361,8 @@ hr {
 }
 
 /* 1.1 1.2topbar white green 精簡+100%  */
-#topbar,#topbarw{
+#topbar,
+#topbarw {
     background-color: #3C4935;
     display: flex;
     justify-content: space-around;
@@ -376,30 +377,34 @@ hr {
     z-index: 999;
     width: 100%;
 }
-#topbarw{
-    background-color: rgba(255,255,255,0.05);
-    
+
+#topbarw {
+    background-color: rgba(255, 255, 255, 0.05);
+
 }
 
 /* 各別區域 */
-#topbar ul ,#topbarw ul{
+#topbar ul,
+#topbarw ul {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 /* 單個 */
-#topbar li ,#topbarw li{
+#topbar li,
+#topbarw li {
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 0 10px;
     /* border: solid 3px pink; */
-    
+
 }
 
 /* 單個文字 */
-#topbar h3,#topbarw h3{
+#topbar h3,
+#topbarw h3 {
     color: #fff;
     font-size: 14px;
     letter-spacing: 2px;
@@ -408,25 +413,26 @@ hr {
 }
 
 /* 快速報名 */
-.signup{
+.signup {
     display: flex;
-    background-color: rgba(155,130,86,.74);
+    background-color: rgba(155, 130, 86, .74);
     padding: 5px;
     margin: 0 20px;
 }
 
 /* 2.banner */
-#banner{
+#banner {
     height: 80vh;
     /* border: solid 5px rgb(186, 229, 181); */
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
-    
+
+
 }
-#banner .sec{
+
+#banner .sec {
     position: relative;
     z-index: 99;
     /* border: solid 5px salmon; */
@@ -434,7 +440,7 @@ hr {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
+
 }
 
 /* 背景影片MP4 */
@@ -447,13 +453,13 @@ hr {
     object-fit: cover;
     width: 100%;
     height: 100%;
-    
+
 }
 
 /* 背景影片gif img */
 /* gif影片模糊不使用 */
 #banner .bgvideo img,
-#banner .bgvideo figure{
+#banner .bgvideo figure {
     /* position: absolute;
     top: 0;
     left: 0;
@@ -463,34 +469,36 @@ hr {
     width: 100%;
     height: 100%; */
     /* border: solid 5px rgb(222, 176, 215); */
-} 
+}
 
-#banner .logo{
+#banner .logo {
     /* z-index: 999; */
     /* border: solid 5px rgb(222, 176, 215); */
     /* width: 80px;
     height: 80px; */
     /* z-index: 2; */
-    
+
 
 }
 
-#banner .text{
+#banner .text {
     color: #fff;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 20px 0;
-    
+
     /* border: solid 5px rgb(158, 178, 233); */
 }
 
-#banner h1,#banner h2,#banner h3{
+#banner h1,
+#banner h2,
+#banner h3 {
     color: #fff;
 }
 
-#banner .more{
+#banner .more {
     color: #fff;
     display: flex;
     justify-content: center;
@@ -498,23 +506,23 @@ hr {
 
 }
 
-#banner h1{
-    font-size: 28px;
+#banner h1 {
+    /* font-size: 34px; */
     padding: 20px 0;
 }
 
-#banner h2{
+#banner h2 {
     font-size: 38px;
     padding: 20px 0;
 }
 
-#banner h4{
+#banner h4 {
     margin: 10px;
     font-size: 34px;
     color: #fff;
 }
 
-#banner h3{
+#banner h3 {
     margin: 10px;
 }
 
@@ -526,7 +534,11 @@ hr {
     /* color: red;
     /* background-color: #9b5698; 
     /* t6 */
-    height: 50vh;
+    height: 100vh;
+    /* border: solid 5px red; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /* about區塊 */
@@ -549,15 +561,8 @@ hr {
 
 /* about文字區塊 */
 .about_block {
-    width: 400px;
-    height: 400px;
-    /* test */
-    /* display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start; */
-    /* justify-content: center; */
-    /* align-items: center; */
+    width: 80%;
+    height: 80vh;
     /* border: solid 5px #555; */
 }
 
@@ -566,17 +571,14 @@ hr {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 700px;
+    /* border: solid 3px pink; */
 }
 
 /* 圖片相對位置 */
 .about_box {
     position: relative;
     width: 800px;
-    height: 700px;
-    /* t6 */
-    /* height: 100vh; */
-    /*  */
+    height: 100vh;
     z-index: 1;
     display: flex;
     justify-content: flex-end;
@@ -586,25 +588,29 @@ hr {
 /* t6 */
 /* 團體照片 */
 .group img {
-    height: 700px;
+    /* height: 700px; */
+    height: 100vh;
+    /* width: 100%; */
+
+    width: 480px;
     /* border: #19bbd8 5px solid; */
 }
 
 
-/* 個人c繪畫圖片 */
+/* 個人繪畫圖片 */
 .about_along {
+    /* width: 30%; */
+    height: 48vh;
     position: absolute;
-    left: 20px;
-    bottom: -40px;
+    left: -130px;
+    bottom: -30px;
     z-index: 99;
     display: flex;
     vertical-align: bottom;
 }
 
-
-/* test */
 hr {
-    width: 700px;
+    width: 560px;
 }
 
 /* 成為 */
@@ -618,7 +624,7 @@ hr {
     width: 700px;
 }
 
-/* ABOUT */
+/* /ABOUT標題 */
 .e {
     font-family: 'Unna', serif;
     font-size: 14px;
@@ -627,7 +633,7 @@ hr {
     letter-spacing: 2px;
 }
 
-/* 文案 蘵感是一個~ */
+/* 文案 蘵感是一個... */
 .p {
     font-size: 14px;
     font-weight: normal;
@@ -639,178 +645,140 @@ hr {
     line-height: 1.6;
 }
 
-/* test */
-/* 背景大logo */
+/* 底圖大logo */
 .bg_logo {
     margin-top: 180px;
+    position: absolute;
+    z-index: 99;
     /* border: solid 5px red;  */
 }
 
 /* 4.course */
 #course {
-    background-color: #3C4935;
     height: 100vh;
+    background-color: #3C4935;
     color: #fff;
-    /* border: #e50909 5px solid; */
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
+    position: relative;
+    /* border: solid 5px pink; */
 }
 
+/* h3字體顏色 */
+#course h3 {
+    color: #fff;
+    letter-spacing: 1px;
+}
 
-/* 五個課程 */
+/* 整個區塊 */
 #course ul {
     display: flex;
-    /* justify-content: space-between; */
-    /* align-items: center; */
-    /* border: #72a4db 5px solid; */
-    height: 600px;
-    /* padding: 0 30px; */
-    /* t2 */
-    position: relative;
-    /* width: 1400px; */
-    /* t3 */
-    width: 1220px;
-    /* width: 60%; */
-}
-
-/* 單一課程 */
-#course li {
-    /* position: relative; */
-    /* display: inline-block; */
-    /* padding: 0  10px; */
-    /* margin: 0 5px; */
-    /* border: #df8686 5px solid; */
-    /* width: 210px;
-    height: 430px; */
+    justify-content: center;
+    align-items: center;
+    width: 85%;
+    height: 80vh;
+    /* border: solid 2px rgb(192, 232, 255); */
 
 }
 
-/* t2 */
-/* t3調整間距寬度 */
-.f {
+/* 上下相對位置 */
+/* 共用上面行 */
+.item1,
+.item3,
+.item5 {
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 50px;
 }
 
-.pai {
+/* 共用下面行 */
+.item2,
+.item4 {
     position: absolute;
-    bottom: 0;
-    left: 250px;
+    top: 150px;
 }
 
-.h {
-    position: absolute;
-    top: 0;
+/* 獨立距離 */
+.item1 {
+    left: 80px;
+}
+
+.item2 {
+    left: 290px;
+}
+
+.item3 {
     left: 500px;
 }
 
-.pu {
-    position: absolute;
-    bottom: 0;
-    left: 750px;
+.item4 {
+    left: 710px;
 }
 
-.d {
-    position: absolute;
-    top: 0;
-    left: 1000px;
+.item5 {
+    left: 920px;
 }
 
-/* logo+文字 小標題區 */
-.course_class {
+/* 單一區塊 */
+#course li {
     display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    /* t7 */
-    margin: 20px 0;
-    /* border: #4727be 5px solid;  */
-}
-
-/* logo小icon */
-.course_img {
-    display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;
-    /* margin-right: 5px; */
-    /* border: #4727be 5px solid; */
+    padding: 10px;
+    /* border: solid 2px pink; */
 }
 
-/* 小標題 */
-.course_text h3 {
-    display: flex;
-    color: #E7E4DB;
-    /* +++ */
-    margin:10px;
-    /* border: #acbe27 5px solid; */
-}
-
-#course div {
+/* 圖片區塊 放入咖啡色區塊 */
+#course .cimg {
     position: relative;
-    width: 216px;
-    height: 432px;
-    z-index: 1;
+    /* border: solid 2px pink;  */
 }
 
-/* 卡其色方塊和內容 */
-#course .course_p {
-    background-color: #9B8256;
-    opacity: 0.85;
-    color: #fff;
-    text-align: center;
+/* 單個圖片 */
+.cimg img {
+    width: 100%;
+    height: 60vh;
+    /* border: solid 3px pink; */
+}
+
+/* 小標題 藝術插花和圖示 */
+#course nav {
+    display: flex;
+    align-items: center;
+    /* border: solid 3px pink; */
+}
+
+/*藝術插花和其他的間距  */
+#course span {
+    padding: 0 10px;
+    /* margin: 0 5px; */
+}
+
+/* 咖啡色區塊 */
+#course .cblock h3 {
+    background-color: rgba(155, 130, 86, 0.85);
     position: absolute;
-    width: 216px;
-    height: 184px;
     left: 0;
     bottom: 0;
-    z-index: 99;
+    z-index: 999;
+    width: 100%;
+    height: 25vh;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-/* 往右箭頭查看更多 */
-#course a {
-    text-decoration: none;
-    color: #fff;
-    font-size: 14px;
-    letter-spacing: 2px;
-
-}
-
-/* 文字內容 用鮮花~ */
-#course p {
-    font-size: 14px;
-    /* font-weight: lighter; */
-    color: #fff;
-    letter-spacing: 2px;
-    line-height: 1.4;
-    margin: 10px 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-/* test2 */
-.sec {
-    display: flex;
-    flex-direction: column;
-
-}
-
+/* 調整每個區塊相對的上下位置 */
+.item1 {}
 
 /* 5.teachers */
 #teachers {
     color: #1d201d;
     background-color: #F0F0F0;
     height: 100vh;
-    /* test */
     display: flex;
     flex-direction: column;
     justify-content: center;
-    /* border: solid 5px rgb(244, 184, 184); */
     position: relative;
 }
 
@@ -818,20 +786,7 @@ hr {
 #teachers li {
     color: #1d201d;
     position: relative;
-    /* display: inline-block; */
-    /* margin: 5px 0; */
-    /* border: solid 5px red; */
 }
-
-/* 師資名字 */
-/* .teachers_name {
-    position: absolute;
-    left: 0;
-    top: 0;
-    border: #fff solid 1px;
-    border-style: hidden;
-    color: #fff;
-} */
 
 /* 師資名字 */
 #teachers h2 {
@@ -843,7 +798,6 @@ hr {
     top: 10px;
 }
 
-/* t2 */
 #teachers h4 {
     color: #fff;
     font-size: 14px;
@@ -856,9 +810,6 @@ hr {
     width: 230px;
     height: 350px;
     display: flex;
-    /* t9 */
-    /* padding: 5px; */
-    /* margin: 10px; */
 }
 
 /* 綠色方塊區 */
@@ -868,15 +819,11 @@ hr {
     color: #fff;
     width: 70px;
     height: 300px;
-    /* /* text-align: center; */
-    /* display: flex;
-    justify-content: center; */
     letter-spacing: 0.045em;
     position: absolute;
     right: 15px;
     bottom: -10px;
     z-index: 99;
-
 }
 
 /* 師資學歷 */
@@ -887,7 +834,6 @@ hr {
     font-size: 14px;
     letter-spacing: 5px;
     font-weight: lighter;
-
 }
 
 /* 師資擅長 */
@@ -900,19 +846,8 @@ hr {
     font-weight: lighter;
 }
 
-
-/* test */
-/* #teachers hr{
-    width: 650px;
-    color: #797474;
-    display: flex;
-    justify-self: start;
-    border: solid 5px #797474;
-} */
-
 /* 五個圖片區域 */
 #teachers ul {
-    /* border: solid 5px rgb(214, 210, 161); */
     display: flex;
     justify-content: flex-end;
     margin-top: 130px;
@@ -927,167 +862,121 @@ hr {
 .n {
     display: flex;
     flex-direction: column;
-    /* align-items: flex-start; */
-    /* border: solid 5px #8d5c5c; */
     position: absolute;
-    left:200px ;
+    left: 60px;
     top: 0;
-    /* margin: 20px 0; */
 }
 
 /* 整個區塊 */
-.a{
+.a {
     position: relative;
-    /* border: solid 5px #83c1d0; */
 }
 
 /* bg_logo */
-.b{
+.b {
     position: absolute;
-    top: -240px;
-    right: 150px;
+    top: -160px;
+    right: 100px;
 }
 
 
 
 /* 6.news  */
 #news {
-    /* display: flex; */
-    /* justify-content: space-between; */
-    /* align-items: center; */
-    position: relative;
-    /* 把上下區塊連在一起 才不會有空白  */
-    border: solid 1px #F0F0F0;
     height: 100vh;
-    /* t */
-    /* height: 20vh; */
-    height: 17vh;
-    background-color: #F0F0F0;
-}
-
-/* 圖片的範圍 */
-.news_main {
-    /* width: 300px; */
-    /* height: 500px; */
-    position: absolute;
-    left: 0;
-    top: 0;
-    /* border: solid 5px red; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* border: solid 5px rgb(208, 148, 148); */
 }
 
 /* 左邊圖片 */
-.news_main img {
+#news .pho img {
     height: 100vh;
+    width: 100%;
+    /* border: solid 5px rgb(190, 228, 243) */
 }
 
-#news.title {
-    background-color: #F0F0F0;
+/* 右邊內容區塊 */
+#news .uu{
+    padding: 10px;
+    margin: 30px;
+    /* border: solid 5px rgb(243, 224, 190) */
+
 }
-
-/* 主要文字內容區塊 */
-#news .news_col {
-    width: 700px;
-    height: 620px;
-    margin: 40px 650px;
-    /* border: solid 5px red; */
-    /* t1 */
-    /* display: flex;
-    flex-direction: column;
-    justify-content: left; */
-}
-
-/* hr */
-/* .news_hrline {
-    width: 700px;
-} */
-
-/* news 標題區塊 */
-#news nav {
+/* 標題列 */
+#news .nav {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    width: 88%;
     position: relative;
-    width: 700px;
-    height: 80px;
-    /* 原本 */
-    /* padding: 15px 0;
-    margin: 10px 0; */
-    /* border: solid 5px rgb(144, 178, 213); */
+    padding-top:10px ;
+    /* border: solid 5px rgb(190, 228, 243) */
 }
 
 /* 查看更多 */
-.news_more {
-    vertical-align: bottom;
+#news .more {
+    padding-top: 20px;
     position: absolute;
-    right: -20px;
-    top: -8px;
-    line-height: 30px;
-    padding: 1px;
-    margin: 10px;
-    /* border: solid 5px rgb(144, 178, 213); */
-}
-
-/* news內容區塊 */
-.news_news {
-    position: relative;
-    padding: 5px 0;
-    margin: 3px 0;
-    width: 700px;
-    height: 100px;
-    /* border: solid 5px rgb(144, 178, 213); */
-}
-
-/* icon右圈圈箭頭 */
-.news_img {
-    position: absolute;
+    top: 10px;
     right: 0;
-    bottom: 10px;
-    width: 48px;
-    height: 48px;
-    margin: 20px;
-    /* border: solid 5px rgb(144, 178, 213); */
+}
+
+/* 內容大區塊 */
+#news .kk{
+    position: relative;
+    /* border: solid 5px rgb(190, 228, 243); */
+}
+
+/* 內容小區塊 */
+#news .box1 {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 88%;
+    /* border: solid 5px rgb(230, 190, 243); */
+}
+
+
+/* 向右圈圈箭頭 */
+#news .arrow {
+    padding-top: 20px;
+    margin: 10px;
+    /* border: solid 5px rgb(243, 235, 190) */
+}
+
+/* hr */
+#news hr {
+    margin-top: 15px;
+    width: 570px;
+}
+
+/*活動快訊  */
+#news h2{
+    line-height: 1.5rem;
 }
 
 /* :hover */
-.news_img {
+#news .arrow img {
     background-image: url(img/index/index-news/arrow\(白\).svg);
 }
 
-.news_img :hover {
+#news .arrow img:hover {
     background-image: url(img/index/index-news/arrow\(黑\).svg);
 }
 
-.news_date {
-    font-size: 14px;
-    color: #1d201d;
-    letter-spacing: 2px;
-    padding: 10px;
-    margin: 10 0px;
-    text-align: start;
-    width: 700px;
-}
 
-.news_text {
-    font-size: 16px;
-    color: #1d201d;
-    letter-spacing: 2px;
-    padding: 10px;
-    margin: 10 0px;
-    text-align: start;
-    width: 700px;
-}
 
-#news hr {
-    /* padding: 5px; */
-    /* color: #797474; */
-    border-color: #797474;
-    margin: 20px 0;
-    /* margin: 5 5 0 5px; */
-}
 
-#news h1{
-    font-size: 34px;
-    color: #1D201D;
-}
+
+
+
+
+
+
+
+
 
 
 /* 7.media */
@@ -1099,14 +988,14 @@ hr {
     flex-direction: column;
     justify-content: center;
     align-items: center ; */
-    margin-top:700px ;
+    margin-top: 700px;
     /* border: solid 5px red; */
 }
 
 /* 標題區 */
 .media_nav {
     /* position: relative; */
-    padding: 15px  5px 5px 10px;
+    padding: 15px 5px 5px 10px;
     height: 80px;
     /* t */
     display: flex;
@@ -1117,7 +1006,7 @@ hr {
 
 #media hr {
     width: 700px;
-    background-color:#797474;
+    background-color: #797474;
     margin: 30px 0;
 }
 
@@ -1132,7 +1021,7 @@ hr {
     top: 0; */
     /* border: solid 5px red; */
     width: 700px;
-    margin-right:10px ;
+    margin-right: 10px;
 
 }
 
@@ -1149,7 +1038,7 @@ hr {
     height: 400px;
     /* border: solid 5px rgb(159, 214, 236); */
     padding: 0 10px;
-    margin:0 10px ;
+    margin: 0 10px;
     /* display: flex;
     justify-content: space-between; */
 }
@@ -1210,8 +1099,8 @@ hr {
     display: flex;
     /* justify-content: center; */
     padding: 10px 10px 0 10px;
-    margin: 20px  10px 50px 10px;
-   
+    margin: 20px 10px 50px 10px;
+
 }
 
 /* 8.footer */
@@ -1260,22 +1149,21 @@ hr {
     margin: 30px 0;
 }
 
-.copyright{
+.copyright {
     color: #fff;
     font-size: 12px;
     font-family: 'Unna', serif;
 }
 
-#footer h1{
-    color: #fff;;
+#footer h1 {
+    color: #fff;
+    ;
     font-size: 30px;
     font-family: 'Unna', serif;
 
 }
 
-#footer h3{
+#footer h3 {
     color: #E7E4DB;
-    
+
 }
-
-
