--- a/蘵感ZanGan上傳/pages.css
+++ b/蘵感ZanGan上傳/pages.css
@@ -213,9 +213,9 @@ h4 {
     padding: 5px 0;
 }
 
-
-
-
+#news_content h3,#media h3{
+    font-family: 'Unna', serif;
+}
 
 /* 1.1 1.2topbar white green 精簡+100%  */
 #topbar,#topbarw{
